--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,33 @@
 {
-  "name": "laravelcollective/html",
-  "description": "HTML and Form Builders for the Laravel Framework",
-  "license": "MIT",
-  "homepage": "http://laravelcollective.com",
-  "support": {
-    "issues": "https://github.com/LaravelCollective/html/issues",
-    "source": "https://github.com/LaravelCollective/html"
-  },
-  "authors": [
-    {
-      "name": "Adam Engebretson",
-      "email": "adam@laravelcollective.com"
+    "name": "servani/html",
+    "description": "HTML and Form Builders for the Laravel Framework adapted for v3 (Little Blue)",
+    "license": "MIT",
+    "homepage": "https://laravelcollective.com",
+    "support": {
+        "issues": "https://github.com/LaravelCollective/html/issues",
+        "source": "https://github.com/LaravelCollective/html"
     },
+    "authors": [
+        {
+            "name": "Adam Engebretson",
+            "email": "adam@laravelcollective.com"
+        },
+        {
+            "name": "Taylor Otwell",
+            "email": "taylorotwell@gmail.com"
+        },
     {
-      "name": "Taylor Otwell",
-      "email": "taylorotwell@gmail.com"
-    }
-  ],
-  "require": {
-    "php": ">=5.6.4",
-    "illuminate/http": "5.3.*",
-    "illuminate/routing": "5.3.*",
-    "illuminate/session": "5.3.*",
-    "illuminate/support": "5.3.*",
-    "illuminate/view": "5.3.*"
-  },
-  "require-dev": {
-    "illuminate/database": "5.3.*",
-    "mockery/mockery": "~0.9.4",
-    "phpunit/phpunit": "~5.4"
-  },
-  "autoload": {
-    "psr-4": {
-      "Collective\\Html\\": "src/"
+	    "name": "Federico Viarnes",
+	    "email": "fede@littleblue.com.ar"
+	   }
+    ],
+    "require": {
+        "php": ">=7.1.3",
+        "illuminate/http": "5.7.*",
+        "illuminate/routing": "5.7.*",
+        "illuminate/session": "5.7.*",
+        "illuminate/support": "5.7.*",
+        "illuminate/view": "5.7.*"
     },
     "files": [
       "src/helpers.php"
